<resources>
    <string name="app_name">360CRMParent</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--===========================================================底部导航================================================================-->

    <!--模块：底部导航菜单   菜单title-->
    <string name="tabhost_home">首页</string>
    <string name="tabhost_study">学习</string>
    <string name="tabhost_growup">成长</string>
    <string name="tabhost_mine">我的</string>


    <!--===========================================================我的================================================================-->

    <!--模块：我的   菜单title-->
    <string name="mine_invite">邀请有奖</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_feedback">意见反馈</string>

    <!--模块：我的   顶部卡片title-->
    <string name="mine_integral">积分</string>
    <string name="mine_total_class_hour">总课时</string>
    <string name="mine_consumption_hour">消耗课时</string>
    <string name="mine_hour_left">剩余课时</string>



    <!--===========================================================主页================================================================-->


    <!--模块：主页   菜单标题-->
    <string name="home_curriculum">课表</string>
    <string name="home_attence">考勤</string>
    <string name="home_homework">作业</string>
    <string name="home_assessment">课评</string>
    <string name="home_book">图书</string>
    <string name="home_notify">通知</string>
    <string name="home_output">作品</string>
    <string name="home_credit">积分</string>

    <string name="more">更多</string>
    <string name="ad_txt1">邀请更多家长加入学习管家</string>
    <string name="ad_txt2">通过手机号邀请学生家长加入手机管家赢取积分送豪礼</string>
    <string name="ad_title">推荐有奖</string>


    <!--===========================================================学习================================================================-->
    <string name="study_course">课程</string>
    <string name="study_class">班级</string>
    <string name="study_preview">预习</string>
    <string name="study_appointment">预约</string>
    <string name="exit_count">退出账号</string>
    <string name="setting">设置</string>


    <string name="growup_output">作品册</string>
    <string name="growup_vs">成长对比</string>
    <string name="growup_care">成长关注</string>

    <string name="version">当前版本</string>
    <string name="card_empty_add">暂无档案信息,去添加</string>
    <string name="change_account">切换档案</string>
    <string name="year_old">岁</string>
    <string name="sno">学号</string>
    <string name="card_sno">卡号</string>
    <string name="jump">跳过</string>
    <string name="jump_rightnow">立刻体验</string>
    <string name="login">登录</string>
    <string name="login_forgetPassWord">忘记密码</string>
    <string name="login_edit_user">请输入学习管家账号</string>
    <string name="login_edit_password">请输入密码</string>
    <string name="empty_edit_login">账号或密码不能为空</string>
    <string name="set_password_hint">设置密码(至少8位,英文数字组合)</string>
    <string name="regsist_now">立即注册</string>
    <string name="reset_pwd">修改密码</string>
    <string name="net_error">网络请求失败</string>
    <string name="emoty_person">获取不到个人资料</string>
    <string name="tabhost_zhibo">直播</string>
</resources>
