<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/item_home"
            android:enabled="true"
            android:icon="@drawable/home_selector"
            android:title="@string/tabhost_home"
            app:showAsAction="always" />
        <item
            android:id="@+id/item_study"
            android:enabled="true"
            android:checkable="true"
            android:icon="@drawable/study_selector"
            android:title="@string/tabhost_study"
            app:showAsAction="always" />

        <item
            android:id="@+id/item_growup"
            android:enabled="true"
            android:icon="@mipmap/growup"
            android:title="@string/tabhost_growup"
            app:showAsAction="always" />

        <item
            android:id="@+id/item_mine"
            android:enabled="true"
            android:icon="@mipmap/mine"
            android:title="@string/tabhost_mine"
            app:showAsAction="always" />
</menu>