<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ImageView
    android:id="@+id/logo"
    android:layout_width="@dimen/login_img"
    android:layout_height="@dimen/login_img"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.15"
    android:src="@mipmap/logo"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/logo"
        >

        <ImageView
            android:id="@+id/user_img"
            style="@style/loginn_img"
            android:src="@mipmap/login_user"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_edit_user"
            android:hint="@string/login_edit_user"
            app:layout_constraintLeft_toRightOf="@id/user_img"
            app:layout_constraintBottom_toBottomOf="@id/user_img"
            app:layout_constraintRight_toLeftOf="@id/see"
            style="@style/login_edit" />

        <View
            android:id="@+id/line1"
            style="@style/line"
            android:layout_marginTop="@dimen/account_value_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_img" />

        <ImageView
            android:id="@+id/password_img"
            style="@style/loginn_img"
            android:src="@mipmap/login_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1"/>

        <ImageView
            android:id="@+id/see"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/back_padding"
            android:src="@drawable/see_selector"
            app:layout_constraintBottom_toBottomOf="@id/password_img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/password_img" />

        <EditText
            android:id="@+id/login_edit_password"
            android:hint="@string/login_edit_password"
            app:layout_constraintLeft_toRightOf="@id/password_img"
            app:layout_constraintBottom_toBottomOf="@id/password_img"
            app:layout_constraintRight_toLeftOf="@id/see"
            style="@style/login_edit"
             />

        <View
            android:id="@+id/line2"
            style="@style/line"
            android:layout_marginTop="@dimen/account_value_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_img" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn"
            android:layout_marginTop="@dimen/loginn_img_marginTop"
            android:background="@color/font_select"
            android:text="@string/login"
            android:textSize="@dimen/login_btn_text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <TextView
            android:id="@+id/login_forgetPassWord"
            style="@style/login_bt"
            android:text="@string/login_forgetPassWord"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout
>

</androidx.constraintlayout.widget.ConstraintLayout>